--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
+    "react-use-websocket": "^3.0.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3"
   },
