--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -3,7 +3,7 @@
 name: GCP - Artifact Registry
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 jobs:
   build-push-artifact-registry:
     name: Build and Push to GCP
@@ -14,31 +14,31 @@ jobs:
       REGISTRY: holmes-container-registry
       REGION: northamerica-northeast1
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - uses: google-github-actions/setup-gcloud@master
-      with:
-        service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-        project_id: ${{ env.PROJECT_ID }}
-        export_default_credentials: true
+      - uses: google-github-actions/setup-gcloud@main
+        with:
+          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+          project_id: ${{ env.PROJECT_ID }}
+          export_default_credentials: true
 
-    - name: Build Docker Image
-      run: docker build -t $IMAGE_NAME:latest .
+      - name: Build Docker Image
+        run: docker build -t $IMAGE_NAME:latest .
 
-    - name: Automatic Tagging of Releases
-      id: increment-git-tag
-      run: |
-        bash ./scripts/git_update.sh -v major
-    - name: Configure Docker Client
-      run: |-
-        gcloud auth configure-docker --quiet
-        gcloud auth configure-docker $REGION-docker.pkg.dev --quiet
-    - name: Push to Artifact Registry
-      env:
-        GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
-      run: |-
-        docker tag $IMAGE_NAME:latest $REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY/$IMAGE_NAME:latest
-        docker tag $IMAGE_NAME:latest $REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY/$IMAGE_NAME:$GIT_TAG
-        docker push $REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY/$IMAGE_NAME:latest
-        docker push $REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY/$IMAGE_NAME:$GIT_TAG
+      - name: Automatic Tagging of Releases
+        id: increment-git-tag
+        run: |
+          bash ./scripts/git_update.sh -v major
+      - name: Configure Docker Client
+        run: |-
+          gcloud auth configure-docker --quiet
+          gcloud auth configure-docker $REGION-docker.pkg.dev --quiet
+      - name: Push to Artifact Registry
+        env:
+          GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
+        run: |-
+          docker tag $IMAGE_NAME:latest $REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY/$IMAGE_NAME:latest
+          docker tag $IMAGE_NAME:latest $REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY/$IMAGE_NAME:$GIT_TAG
+          docker push $REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY/$IMAGE_NAME:latest
+          docker push $REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY/$IMAGE_NAME:$GIT_TAG
