--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -24,14 +24,11 @@ jobs:
           export_default_credentials: true
 
       - name: Build Docker Image
-        run: docker build -t $IMAGE_NAME:latest .
+        run: docker image build -t goba2:latest .
       - name: Configure Docker Client
         run: |-
-          gcloud auth configure-docker --quiet
           gcloud auth configure-docker $REGION-docker.pkg.dev --quiet
       - name: Push to Artifact Registry
         run: |-
-          docker tag $IMAGE_NAME:latest $REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY/$IMAGE_NAME:latest
-          docker tag $IMAGE_NAME:latest $REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY/$IMAGE_NAME:$GITHUB_SHA
-          docker push $REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY/$IMAGE_NAME:latest
-          docker push $REGION-docker.pkg.dev/$PROJECT_ID/$REGISTRY/$IMAGE_NAME:$GITHUB_SHA
+          docker tag goba2:latest northamerica-northeast1-docker.pkg.dev/holmes-dev/holmes-container-registry/goba2:latest
+          docker push northamerica-northeast1-docker.pkg.dev/holmes-dev/holmes-container-registry/goba2:latest
