--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -14,18 +14,22 @@ jobs:
       REGISTRY: holmes-container-registry
       REGION: northamerica-northeast1
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+  
+      - name: 'Install GCP CLI'
+        uses: 'google-github-actions/setup-gcloud@v0'
 
-      - uses: google-github-actions/setup-gcloud@main
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v0'
         with:
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-          project_id: ${{ env.PROJECT_ID }}
-          export_default_credentials: true
+          credentials_json: '${{ secrets.SERVICE_ACCOUNT_KEY }}'
 
-      - name: Build Docker Image
+      - name: 'DEBUG'
+        run: 'gcloud info'
+
+      - name: Build
         run: docker image build -t goba2:latest .
-      - name: Configure Docker Client
+
+      - name: Config
         run: |-
           gcloud auth configure-docker $REGION-docker.pkg.dev --quiet
       - name: Push to Artifact Registry
