--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -14,17 +14,19 @@ jobs:
       REGISTRY: holmes-container-registry
       REGION: northamerica-northeast1
     steps:
-  
-      - name: 'Install GCP CLI'
-        uses: 'google-github-actions/setup-gcloud@v0'
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v0'
+      - name: "Install GCP CLI"
+        uses: "google-github-actions/setup-gcloud@v0"
+
+      - id: "auth"
+        uses: "google-github-actions/auth@v0"
         with:
-          credentials_json: '${{ secrets.SERVICE_ACCOUNT_KEY }}'
+          credentials_json: "${{ secrets.SERVICE_ACCOUNT_KEY }}"
 
-      - name: 'DEBUG'
-        run: 'gcloud info'
+      - name: "DEBUG"
+        run: "gcloud info"
 
       - name: Build
         run: docker image build -t goba2:latest .
