--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -14,27 +14,26 @@ jobs:
       REGISTRY: holmes-container-registry
       REGION: northamerica-northeast1
     steps:
-      - name: Checkout
+      - name: "GCP Checkout"
         uses: actions/checkout@v2
 
-      - name: "Install GCP CLI"
+      - name: "GCP Setup"
         uses: "google-github-actions/setup-gcloud@v0"
 
-      - id: "auth"
+      - name: "GCP Auth"
         uses: "google-github-actions/auth@v0"
         with:
           credentials_json: "${{ secrets.SERVICE_ACCOUNT_KEY }}"
 
-      - name: "DEBUG"
-        run: "gcloud info"
+      - name: "GCP Config"
+        run: |-
+          gcloud info
+          gcloud auth configure-docker $REGION-docker.pkg.dev --quiet
 
-      - name: Build
+      - name: "Docker Build"
         run: docker image build -t goba2:latest .
 
-      - name: Config
-        run: |-
-          gcloud auth configure-docker $REGION-docker.pkg.dev --quiet
-      - name: Push to Artifact Registry
+      - name: "Docker Push"
         run: |-
           docker tag goba2:latest northamerica-northeast1-docker.pkg.dev/holmes-dev/holmes-container-registry/goba2:latest
           docker push northamerica-northeast1-docker.pkg.dev/holmes-dev/holmes-container-registry/goba2:latest
