--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -28,8 +28,7 @@ jobs:
       - name: "GCP Config"
         run: |-
           gcloud info
-          echo $REGION
-          gcloud auth configure-docker $REGION-docker.pkg.dev --quiet
+          gcloud auth configure-docker $GCP_REGION-docker.pkg.dev --quiet
 
       - name: "Docker Build"
         run: docker image build -t goba2:latest .
